k8s/practice/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: my-dashboard.com
    http:
      paths:
      - pathType: Prefix
        path: "/" 
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
